# ZergLang

./: .drone.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  GRAMMAR  Makefile  README.md  README_zh.md  go.work
.github/workflows/: ci.yaml  test.yml
bootstrap/: .gitignore  GRAMMAR  Makefile  go.mod  go.sum  pyproject.toml
bootstrap/cmd/zergb/: main.go  setup.go
bootstrap/pkg/zerg/: compile.go
bootstrap/pkg/zerg/lexer/: lexer.go  lexer_test.go
bootstrap/pkg/zerg/parser/: ast.go  nodetype_string.go  parser.go  rule.go
bootstrap/pkg/zerg/token/: token.go  token_test.go  type.go  type_string.go
bootstrap/tests/: test_ast.py  test_compile.py  test_lexer.py  test_parser.py
bootstrap/zergb/: cli.py  compiler.py  lexer.py  parser.py
docs/: BUILTIN.md  BUILTINS.md  CONCEPTS.md  ERRORS.md  EXPRESSIONS.md  GRAMMAR  MEMORY.md  Makefile  PATTERNS.md  SPECS.md  UNSAFE.md
docs/examples/: classes.zg  collections.zg  concurrency.zg  errors.zg  fibonacci.zg  (+2 more)
editors/: Makefile
examples/: 00_hello.zg  01_variables.zg  02_functions.zg  03_control_flow.zg  04_structs.zg  05_enums.zg  06_specs.zg  07_null_safety.zg  08_strings.zg  09_fizzbuzz.zg  10_asm.zg  11_concurrency.zg  12_error_handling.zg  13_sync.zg  io_demo.zg  self_host_demo.zg  unsafe_demo.zg
include/: zerg.h  zerg_lib.h
src/: lexer.c  zerg.c
tests/: mini_lexer.zg  run_all.sh  test_byte_type.zg  test_self_hosted_cli.zg  test_std_io.zg  test_std_sys.zg  test_with_statement.zg  verify_chars.zg  verify_classes.zg  verify_collections.zg  verify_enums.zg  verify_io.zg  verify_strings.zg
(+48 files in other folders)
