[tool.poetry]
name = "zergb"
version = "0.1.0"
description = "The bootstrap of Zerg language"
authors = ["cmj <cmj@cmj.tw>"]
license = "MIT"
readme = "README.md"

packages = [
	{ include = "zergb" },
]

[tool.poetry.dependencies]
python = "~3.11"
llvmlite = "^0.42.0"


[tool.poetry.scripts]
zergb = "zergb.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
